# nimd

./: .gitignore  MANIFEST.in  README.md  data_analysis.py  nimd.in  quick_analyze.py  run.py  run_d.py  run_depths.py  run_element_level_attribution.py  run_ie.py  run_layer_mapping.py  run_minvol_identifiability.py  run_ssnmf.py  run_supervised_results.py  setup.cfg  setup.py  temp.py
data/: data.csv
examples/: run.py  run_d.py  run_depths.py  run_element_level_attribution.py  run_ie.py  run_layer_mapping.py  run_minvol_identifiability.py  run_ssnmf.py  run_supervised_results.py
nimd/: __init__.py  analyze_results.py  cli.py  exports.py  interpretation.py  runner.py  supervised.py
nimd/analysis/: __init__.py  data_analysis.py  periodic_map.py  quick_analyze.py
nimd/core/: __init__.py  finetune.py  initiliazation.py  selection.py  sensitivity.py  utils.py
nimd/datasets/: __init__.py  benchmark_heuslerene.csv
nimd/deep/: __init__.py  deep.py  multilayer.py  utils.py
nimd/legacy/: __init__.py  evaluations.py  temp.py
nimd/legacy/nmfs/: FroNMF.py  NNLS.py  __init__.py  _nnls.py  betaNMF.py  deepKLNMF.py  hierNMF.py  multilayerKLNMF.py  nnsvdlrc.py  semiNMF.py  sparseNMF.py  ssnmf.py
nimd/standard/: __init__.py  fronorm.py  nnls.py  utils.py
nimd/templates/: __init__.py
nmfs/: __init__.py
src/: __init__.py  analyze_results.py  exports.py  interpretation.py  runner.py  supervised.py
src/core/: __init__.py  finetune.py  initiliazation.py  selection.py  sensitivity.py  utils.py
src/deep/: __init__.py  deep.py  multilayer.py  utils.py
src/standard/: __init__.py  beta.py  fronorm.py  hier.py  nnls.py  utils.py
tests/: test_smoke.py
