[metadata]
name = nimd
version = 0.1.0
description = NIMD - Nonnegative Interpretable Matrix Decomposition for scientific representation learning
long_description = file: README.md
long_description_content_type = text/markdown
author = Thaksheel Alleck, Akwum Onwunta, Chinedu Ekuma
author_email = tna324@lehigh.edu, onwuntajunior@gmail.com, cekuma1@gmail.com
url = https://github.com/thaksheel/deep_nmf_materials_discovery
license = GPL-3.0-or-later
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords =
    nonnegative matrix factorization
    deep NMF
    interpretable machine learning
    materials informatics
    dimensionality reduction

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    numpy>=1.24
    pandas>=2.0
    scipy>=1.10
    scikit-learn>=1.3
    matplotlib>=3.7
    seaborn>=0.12
    torch>=2.0
    shap>=0.44
    openpyxl>=3.1

[options.packages.find]
exclude =
    tests
    tests.*

[options.package_data]
nimd.datasets =
    *.csv
nimd.templates =
    *.in

[options.entry_points]
console_scripts =
    nimd = nimd.cli:main

[options.extras_require]
tuning =
    optuna>=3.0
dev =
    build>=1.0
    pytest>=7.0
    twine>=5.0
full =
    optuna>=3.0
    notebook>=7.0

[bdist_wheel]
universal = 0
